trunk/Archive2/1f/2e20c8f6845995/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:16:1: error: static_assert failed "what is expected here"
static_assert(is_A<B>{}, "what is expected here");
^             ~~~~~~~~~
1 error generated.
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

